# solo6-153

./: .pre-commit-hooks.yaml  custom-rules.yaml  pyproject.toml
compliance_scan/: __init__.py  __main__.py  cli.py  config.py  default-patterns.yaml  fixer.py  hook.py  reporter.py  rules.py  scanner.py
compliance_scan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
